# 381706-1_Shashkin_All_projects

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
ArrList/: arrlist_main.cpp
ArrListLib/: ArrList.h
ArrListTest/: CMakeLists.txt  test_arrlist.cpp
List/: list_main.cpp
ListLib/: Elem.h  List.h
ListTest/: test_list.cpp
Matrix/: CMakeLists.txt  matrix_main.cpp
MatrixLib/: CMakeLists.txt  Matrix.h
MatrixTest/: CMakeLists.txt  matrix_test_main.cpp  test_matrix.cpp
MultiStack/: multistack_main.cpp
MultiStackLib/: MultiStack.h  NewStack.h
MultiStackTest/: CMakeLists.txt  test_multistack.cpp
MyExceptionLib/: MyException.cpp  MyException.h
Plex/: CMakeLists.txt  plex_main.cpp
PlexLib/: CMakeLists.txt  Line.cpp  Line.h  Plex.cpp  Plex.h  Point.cpp  Point.h
PlexTest/: test_plex.cpp
PolishNotation/: CMakeLists.txt  polish_main.cpp
PolishNotationLib/: CMakeLists.txt  MyString.cpp  MyString.h  Polish.cpp  Polish.h
PolishNotationTest/: CMakeLists.txt  test_polish.cpp
Polynomial/: CMakeLists.txt  polynomial_main.cpp
PolynomialLib/: CMakeLists.txt  Monom.cpp  Monom.h  Polynom.cpp  Polynom.h
PolynomialTest/: CMakeLists.txt  test_polynom.cpp
Queue/: queue_main.cpp
QueueLib/: Queue.h
QueueTest/: CMakeLists.txt  test_queue.cpp
Reports/: Shashkin_ArrayList_Report.docx  Shashkin_List_Report.docx  Shashkin_Matrix_Report.docx  Shashkin_MultiStack_Report.docx  Shashkin_PolishNotation_Report.docx  Shashkin_Polynomial_Report.docx  Shashkin_Queue_Report.docx  Shashkin_SortTable_Report.docx  Shashkin_StackList_Report.docx  Shashkin_Stack_Report.docx  Shashkin_ViewingTable_Report.docx
SortTable/: sort_table_main.cpp
SortTableLib/: SortTable.h  SortTableElem.h
SortTableTest/: test_sort_table.cpp
Stack/: stack_main.cpp
StackLib/: Stack.h
StackListLib/: StackList.h
StackListTest/: CMakeLists.txt
StackTest/: CMakeLists.txt  stack_test.cpp  test_stack.cpp
Text/: CMakeLists.txt  text_main.cpp
TextLib/: CMakeLists.txt  Node.cpp  Node.h  NodeIter.cpp  NodeIter.h  Text.cpp  Text.h
TextTest/: test_text.cpp  text_test_main.cpp
Vector/: CMakeLists.txt  main.cpp  vector_main.cpp
VectorLib/: CMakeLists.txt  TVector.h  Vector.h
VectorTest/: CMakeLists.txt  test_main.cpp  test_vector.cpp
ViewingTable/: viewing_table_main.cpp
ViewingTableLib/: TableElem.h  ViewingTable.h
ViewingTableTest/: test_viewing_table.cpp
